Build+Test: Open test resources for property loader